os/bluestore: fix broken unused calculation

The original implementation will take any placeholder pextents into
account when calculating unused bits, which is wrong.
E.g., considering a write sequence like (64kB min_alloc_size):

- _do_write_small 0x11000~1000

- _do_write_small 0x15000~3000

the second write [0x15000~3000] would fail to fill in the unused slot
and trigger a chunk-aligned deferred overwrite instead.

Check the tracker below for a detailed description of the symptom.

Fixes: https://tracker.ceph.com/issues/41901
Signed-off-by: xie xingguo <xie.xingguo@zte.com.cn>