src/os/bluestore/bluestore_types.cc
@@ -630,7 +630,7 @@ string bluestore_blob_t::get_flags_string(unsigned flags)
       s += '+';
     s += "csum";
   }
-  if (flags & FLAG_HAS_UNUSED) {
+  if (flags & (FLAG_HAS_UNUSED | LEGACY_FLAG_HAS_UNUSED)) {
     if (s.length())
       s += '+';
     s += "has_unused";
@@ -678,8 +678,7 @@ void bluestore_blob_t::generate_test_instances(list<bluestore_blob_t*>& ls)
   ls.push_back(new bluestore_blob_t);
   ls.back()->init_csum(Checksummer::CSUM_XXHASH32, 16, 65536);
   ls.back()->csum_data = buffer::claim_malloc(4, strdup("abcd"));
-  ls.back()->add_unused(0, 3);
-  ls.back()->add_unused(8, 8);
+  ls.back()->mark_all_unused();
   ls.back()->allocated_test(bluestore_pextent_t(0x40100000, 0x10000));
   ls.back()->allocated_test(
     bluestore_pextent_t(bluestore_pextent_t::INVALID_OFFSET, 0x1000));
